# Coherence

./: .gitignore  CMakeLists.txt  README.md  TODO.txt
ast/: CMakeLists.txt  debug_printer.cpp  debug_printer.hpp  expr.hpp  stmts.hpp  top_level.hpp  types.hpp
ast_stuff/: expr.hpp  func_actors.hpp  program.hpp  stmts.hpp  types.hpp  values.hpp
ast_validation/: CMakeLists.txt  Readme.md  ast_validator.cpp  ast_validator.hpp
ast_validation/compute_lock_info/: CMakeLists.txt  callable_graph.hpp  callable_graph_builder.cpp  callable_graph_builder.hpp  compute_lock_info.cpp  compute_lock_info.hpp  fill_atomic_lock_info.cpp  fill_atomic_lock_info.hpp  fill_callable_lock_info.cpp  fill_callable_lock_info.hpp  fill_lock_info.cpp  fill_lock_info.hpp  sccs_finder.cpp  sccs_finder.hpp  stage_structs.hpp  stage_utils.cpp  stage_utils.hpp
ast_validation/declaration_collection/: CMakeLists.txt  declaration_collector.cpp  declaration_collector.hpp
ast_validation/general_utils/: CMakeLists.txt  general_validator_structs.hpp  utils.cpp  utils.hpp
ast_validation/type_checker/: CMakeLists.txt  core_type_checker.cpp  core_type_checker.hpp  full_type_checker.cpp  full_type_checker.hpp  initialization_checker.cpp  initialization_checker.hpp  model_checker.pl  return_checker.cpp  return_checker.hpp  type_checker_utils.cpp  type_checker_utils.hpp
ast_validation/var_validity_checker/: CMakeLists.txt  consume_checker.cpp  consume_checker.hpp  override_checker.cpp  override_checker.hpp  unalias_checker.cpp  unalias_checker.hpp  var_validity_checker.cpp  var_validity_checker.hpp
benchmarks/: CMakeLists.txt  run_benchmarks.py
benchmarks/compilation_time/: phi_generator.py
benchmarks/contended_counter/coherence_implementation/: prog.coh
benchmarks/contended_counter/pony_implementation/: main.pony
benchmarks/ping_pong/coherence_implementation/: prog.coh
benchmarks/ping_pong/cpp_implementation/: ping_pong.cpp
benchmarks/ping_pong/pony_implementation/: main.pony
benchmarks/ring_token/coherence_implementation/: prog.coh
benchmarks/ring_token/cpp_implementation/: ring_token.cpp
benchmarks/ring_token/pony_implementation/: main.pony
benchmarks/struct_access/coherence_implementation/: prog.coh
benchmarks/struct_access/pony_implementation/: main.pony
codegen/: CMakeLists.txt  CONVENTIONS.md  alpha_renaming.cpp  alpha_renaming.hpp  codegen.cpp  codegen.hpp  codegen_utils.cpp  codegen_utils.hpp  declarations_gen.cpp  generate_llvm_structs.cpp  generate_llvm_structs.hpp  generator_state.hpp  rough_plan.txt  special_reg_names.cpp  special_reg_names.hpp  string_utils.cpp  string_utils.hpp
coherence/: CMakeLists.txt  main.cpp
compiler/: CMakeLists.txt  main.cpp
global_utils/: CMakeLists.txt  alpha_renaming.cpp  alpha_renaming.hpp  ast_walkers.cpp  ast_walkers.hpp  defer.cpp  pattern_matching_boilerplate.hpp  scoped_store.cpp
lexer_parser/: CMakeLists.txt  lexer.l  parse_file.cpp  parse_file.hpp  parser.y
lexing_and_parsing_rough/: ast.ml
reports/: TODO.txt
reports/dissertation/: main.tex  prior_feedback_to_keep_in_mind.txt  project_justification.typ
reports/dissertation/appendix/: appendix.tex
reports/dissertation/chapters/: bibliography.bib  introduction.typ  preparation.typ  project_justification.typ
reports/dissertation/chapters/implementation/: appendix.tex  appendix_a.tex  basic_type_system.tex  basic_type_system_in_typst.typ  implementation.tex  implementation.typ  implementation_rough.typ
reports/dissertation/conclusion/: conclusion.tex
reports/dissertation/evaluation/: evaluation.tex
reports/dissertation/implementation/: implementation.tex
reports/dissertation/introduction/: introduction.tex
reports/dissertation/preparation/: preparation.tex
runtime/: CMakeLists.txt  CONVENTIONS.md  entry_point.cpp  runtime_datastructures.hpp  runtime_traps.cpp  runtime_traps.hpp
sample_programs/: simple.coh  structs.coh
sample_programs/ill_typed_programs/: constructor_leaves_members_uninitialized.coh  dereferencing_lock_outside_atomic_section.coh  reference_capabilities_misused.coh
sample_programs/well_typed_programs/: actors.coh  allocations.coh  control_statements.coh  hello_world_equivalent.coh  sending_iso_data.coh  simple.coh  variable_overriding.coh
tests/: CMakeLists.txt
tests/e2e_tests/: CMakeLists.txt  test_utilities.py
tests/e2e_tests/concurrency_tests/: CMakeLists.txt
tests/e2e_tests/deterministic_tests/: CMakeLists.txt  README.md  deterministic_test_harness.py
tests/e2e_tests/functional_tests/: CMakeLists.txt  README.md  functional_test_harness.py
tests/e2e_tests/non_deterministic_tests/: CMakeLists.txt
tests/e2e_tests/type_checking_tests/: CMakeLists.txt  test_frontend_harness.py
tests/frontend_tests/: CMakeLists.txt
tests/frontend_tests/well_typed_programs/: allocations.coh  locks.coh  sending_iso_data.coh  structs.coh
tests/lock_filling_tests/: CMakeLists.txt  test_harness.py
tests/lock_filling_tests/lock_test_data/branching_chain_calls/: expected.json  prog.coh
tests/lock_filling_tests/lock_test_data/complicated_case/: expected.json  prog.coh
tests/lock_filling_tests/lock_test_data/simple_lock_usage/: expected.json  prog.coh
tests/lock_filling_tests/lock_test_data/triangle_calls/: expected.json  prog.coh
tests/lock_filling_tests/lock_test_runner/: CMakeLists.txt  callable_lock_info.cpp  callable_lock_info.hpp  test_runner.cpp
tests/type_checking_tests/: CMakeLists.txt  frontend_test_harness.py  test_frontend_harness.py
tests/type_checking_tests/ill_typed_programs/: accessing_this_ptr_before_initialization.coh  aliasing_iso.coh  assigning_val_to_ref.coh  calling_func_before_initialization.coh  deref_lock_outside_atomic.coh  iso_across_actor.coh  ref_across_actors.coh  typedef_invalid_recursive_access.coh
tests/type_checking_tests/well_typed_programs/: control_statements.coh  infinite_loop.coh  locks.coh  sending_iso_data.coh  simple.coh  unalias_prog.coh  viewpoints.coh
type_checker/: CMakeLists.txt  env.cpp  env.hpp  overload.hpp  type_checker.cpp  type_checker.hpp  utils.cpp  utils.hpp
(+67 files in other folders)
